# surfboard

./: Cargo.toml  README.md  build.sh  surfboard.desktop
slint/: Cargo.toml  build.rs
slint/src/: virtual_keyboard.rs  wayland.rs
slint/src/utils/: mod.rs  signals.rs
slint/ui/: main_window.slint
src/: macros.rs  main.rs  svg_path.rs  virtual_keyboard.rs  wayland.rs
src/app/: component.rs  dock.rs  gesture.rs  input.rs  keyboard.rs  main_app.rs  main_window.rs  mesh.rs  mod.rs  screen_edge.rs  search.rs  view.rs  view_trait.rs  window.rs
src/comp/: app.rs  key.rs  mod.rs  prefab.rs  shortcut.rs
src/components/: app.rs  gesture.rs  gesture_canvas.rs  key.rs  key_button.rs  mod.rs  shortcut.rs
src/layout/: compact.rs  layout.rs  mod.rs  qwerty.rs
src/utils/: beam_search.rs  bus.rs  debug.rs  functions.rs  globals.rs  mod.rs  signals.rs  svg_path.rs
src/views/: app_launcher.rs  compact_qwerty.rs  config.rs  launcher.rs  main.rs  mini_pick.rs  mod.rs  pick.rs  quick_pick.rs  qwerty_compact.rs  settings.rs
ui/: main_window.slint  virtual_keyboard.slint
