[package]
name = "surfboard"
version = "0.1.0"
edition = "2024"


# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"


[dependencies]
env_logger = "0.11.6"
log = "0.4.22"
walkdir = "2.5.0"
xdg = "2.5.2"
pretty_ini = "0.1.8"
async-std = "1.13.0"

#iced = "0.13.1"
#iced_core = "0.13.0"
#iced_graphics = "0.13.0"
#iced_runtime = "0.13.2"

# dev branch
iced = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_core = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_graphics = { git = "https://github.com/iced-rs/iced", branch = "master" }
iced_runtime = { git = "https://github.com/iced-rs/iced", branch = "master" }


[target.'cfg(any(target_os="windows"))'.dependencies]
iced_layershell = "0.13.2"


[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]



[features]
default = [
    "iced/advanced",
	"iced/image",
	"iced/svg",
    "iced/async-std",
]